syntax = "proto3";

package foil.storage;

message StorageData {
  int32 file_version = 1;
  int64 latest_resource_timestamp = 2;
  int64 latest_market_timestamp = 3;
  map<int64, IntervalData> interval_data = 4;
}

message IntervalData {
  Store resource_store = 1;
  Store trailing_avg_store = 2;
  map<string, Store> index_store = 3;
  map<string, Store> market_store = 4;
}

message Store {
  repeated CandleData data = 1;
  repeated MetaData metadata = 2;
  repeated TrailingAvgData trailing_avg_data = 3;
}

message CandleData {
  int64 timestamp = 1;
  string open = 2;   // Using string for BigInt
  string high = 3;
  string low = 4;
  string close = 5;
}

message MetaData {
  int64 start_timestamp = 1;
  int64 end_timestamp = 2;
  string used = 3;     // Using string for BigInt
  string fee_paid = 4; // Using string for BigInt
}

message TrailingAvgData {
  int64 timestamp = 1;
  string used = 2;     // Using string for BigInt
  string fee_paid = 3; // Using string for BigInt
} 